tests/baselines/reference/checkJsxChildrenProperty15.errors.txt
tests/cases/conformance/jsx/file.tsx(10,13): error TS2322: Type '{ children: Element; }' is not assignable to type 'IntrinsicAttributes'.
  Property 'children' does not exist on type 'IntrinsicAttributes'.
tests/cases/conformance/jsx/file.tsx(11,13): error TS2322: Type '{ children: Element; key: string; }' is not assignable to type 'IntrinsicAttributes'.
  Property 'children' does not exist on type 'IntrinsicAttributes'.
tests/cases/conformance/jsx/file.tsx(12,13): error TS2322: Type '{ children: Element[]; key: string; }' is not assignable to type 'IntrinsicAttributes'.
  Property 'children' does not exist on type 'IntrinsicAttributes'.


==== tests/cases/conformance/jsx/file.tsx (3 errors) ====
    import React = require('react');
    
    const Tag = (x: {}) => <div></div>;
    
    // OK
    const k1 = <Tag />;
    const k2 = <Tag></Tag>;
    
    // Not OK (excess children)
    const k3 = <Tag children={<div></div>} />;
                ~~~
!!! error TS2322: Type '{ {|children|0|}: {|Element|1|}; }' is not assignable to type '{|IntrinsicAttributes|2|}'.
!!! error TS2322:   Property 'children' does not exist on type 'IntrinsicAttributes'.
!!! annotated symbol 0 tests/cases/conformance/jsx/file.tsx:10:17
!!! annotated symbol 1 /.lib/react.d.ts:2359:15
!!! annotated symbol 2 /.lib/react.d.ts:2367:15
    const k4 = <Tag key="1"><div></div></Tag>;
                ~~~
!!! error TS2322: Type '{ {|children|0|}: {|Element|1|}; {|key|2|}: string; }' is not assignable to type '{|IntrinsicAttributes|3|}'.
!!! error TS2322:   Property 'children' does not exist on type 'IntrinsicAttributes'.
!!! annotated dropped!: 0
!!! annotated symbol 1 /.lib/react.d.ts:2359:15
!!! annotated symbol 2 tests/cases/conformance/jsx/file.tsx:11:17
!!! annotated symbol 3 /.lib/react.d.ts:2367:15
    const k5 = <Tag key="1"><div></div><div></div></Tag>;
                ~~~
!!! error TS2322: Type '{ {|children|0|}: {|Element|1|}[]; {|key|2|}: string; }' is not assignable to type '{|IntrinsicAttributes|3|}'.
!!! error TS2322:   Property 'children' does not exist on type 'IntrinsicAttributes'.
!!! annotated dropped!: 0
!!! annotated symbol 1 /.lib/react.d.ts:2359:15
!!! annotated symbol 2 tests/cases/conformance/jsx/file.tsx:12:17
!!! annotated symbol 3 /.lib/react.d.ts:2367:15
    